--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="secondaryDarkColor">#82b3c9</color>
     <color name="primaryTextColor">#000000</color>
     <color name="secondaryTextColor">#000000</color>
+
+    <color name="lightBlue">#85c0ff</color>
+    <color name="darkBlue">#82b3c9</color>
+
 </resources>
