--- a/app/src/main/res/layout/restaurant_card_carousel.xml
+++ b/app/src/main/res/layout/restaurant_card_carousel.xml
@@ -16,8 +16,8 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{restaurantCardCarouselViewModel.criteria.toString()}"
             android:textStyle="bold"
+            app:cardCarouselTitle="@{restaurantCardCarouselViewModel}"
             app:layout_constraintBottom_toTopOf="@id/restaurant_cards"
             app:layout_constraintHorizontal_bias="0.03"
             app:layout_constraintLeft_toLeftOf="parent"
