Show List of RestaurantListItem at ExploreFragment, Add ViewModel & ViewModelFactory & Adapter at ExploreFragment

--- a/app/src/main/res/layout/restaurant_card.xml
+++ b/app/src/main/res/layout/restaurant_card.xml
@@ -9,7 +9,7 @@
             type="com.felixstanley.makanmoerahandroid.entity.restaurant.Restaurant" />
     </data>
 
-    <!-- Each Restaurant Card Width & Height will be adjusted by RecyclerViewAdapter
+    <!-- Each Restaurant Card Width will be adjusted by RecyclerViewAdapter
       to match 60% Parent Width -->
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/restaurant_card"
