--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".fragment.home.HomeFragment">
 
     <data>
 
@@ -17,8 +18,7 @@
             android:id="@+id/home_linear_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            tools:context=".fragment.home.HomeFragment">
+            android:orientation="vertical">
 
             <!-- Restaurant Card Carousels will be added dynamically here -->
 
