--- a/app/src/main/res/layout/restaurant_card_carousel.xml
+++ b/app/src/main/res/layout/restaurant_card_carousel.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/restaurant_cards_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
