--- a/app/src/main/res/layout/checkbox.xml
+++ b/app/src/main/res/layout/checkbox.xml
@@ -9,6 +9,7 @@
     </data>
 
     <CheckBox
+        android:id="@+id/checkbox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@{text}" />
