[FIX BUG] fix bug at explore fragment where screen rotation will trigger filtering at numOfPeople Exposed Dropdown (https://github.com/material-components/material-components-android/issues/1464)

--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -190,7 +190,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/explore_fragment_bottom_sheet_filter_num_of_people_dropdown_hint">
 
-                        <AutoCompleteTextView
+                        <com.felixstanley.makanmoerahandroid.fragment.explore.ExposedDropdownMenu
                             android:id="@+id/restaurant_filter_bottom_sheet_num_of_people_text_view"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
