--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -27,7 +27,7 @@
         tools:layout="@layout/fragment_reservation" />
     <fragment
         android:id="@+id/accountFragment"
-        android:name="com.felixstanley.makanmoerahandroid.fragment.AccountFragment"
+        android:name="com.felixstanley.makanmoerahandroid.fragment.account.AccountFragment"
         android:label="fragment_account"
         tools:layout="@layout/fragment_account" />
 </navigation>
