--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -21,28 +21,31 @@
             android:id="@+id/booking_category_toggle_button_group"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:checkedButton="@id/booking_category_ongoing_toggle_button"
             app:layout_constraintBottom_toTopOf="@id/booking_list"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:selectionRequired="true"
+            app:singleSelection="true">
 
             <Button
                 android:id="@+id/booking_category_ongoing_toggle_button"
-                style="?attr/materialButtonOutlinedStyle"
+                style="@style/bookingStatusButtonToggleGroupStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/booking_fragment_booking_category_ongoing_toggle_button_text" />
 
             <Button
                 android:id="@+id/booking_category_cancelled_toggle_button"
-                style="?attr/materialButtonOutlinedStyle"
+                style="@style/bookingStatusButtonToggleGroupStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/booking_fragment_booking_category_cancelled_toggle_button_text" />
 
             <Button
                 android:id="@+id/booking_category_completed_toggle_button"
-                style="?attr/materialButtonOutlinedStyle"
+                style="@style/bookingStatusButtonToggleGroupStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/booking_fragment_booking_category_completed_toggle_button_text" />
