--- a/app/src/main/res/layout/fragment_reservation.xml
+++ b/app/src/main/res/layout/fragment_reservation.xml
@@ -1,14 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".fragment.ReservationFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Reservation" />
+    <data>
 
-</FrameLayout>
+        <variable
+            name="reservationViewModel"
+            type="com.felixstanley.makanmoerahandroid.fragment.reservation.ReservationViewModel" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:id="@+id/criteria_filter_linear_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@id/reservation_list"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <!-- Booking Category Toggle Button -->
+            <com.google.android.material.button.MaterialButtonToggleGroup
+                android:id="@+id/booking_category_toggle_button_group"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:checkedButton="@id/booking_category_ongoing_toggle_button"
+                app:selectionRequired="true"
+                app:singleSelection="true">
+
+                <Button
+                    android:id="@+id/booking_category_ongoing_toggle_button"
+                    style="@style/bookingStatusButtonToggleGroupStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/reservation_fragment_booking_category_ongoing_toggle_button_text" />
+
+                <Button
+                    android:id="@+id/booking_category_cancelled_toggle_button"
+                    style="@style/bookingStatusButtonToggleGroupStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/reservation_fragment_booking_category_cancelled_toggle_button_text" />
+
+                <Button
+                    android:id="@+id/booking_category_completed_toggle_button"
+                    style="@style/bookingStatusButtonToggleGroupStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/reservation_fragment_booking_category_completed_toggle_button_text" />
+
+            </com.google.android.material.button.MaterialButtonToggleGroup>
+
+            <TextView
+                android:id="@+id/date_picker_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/reservation_fragment_date_picker_header_text"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <!-- Date Edit Text -->
+            <EditText
+                android:id="@+id/date_picker_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false" />
+
+        </LinearLayout>
+
+        <!-- Reservation List Item Recycler View -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/reservation_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="120dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
