Add Restaurant Details Fragment, Navigate to Restaurant Details Fragment upon clicking Restaurant List & Booking List & Restaurant Card, Add Support of Navigation Up Button at App/Action Bar

--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -32,4 +32,9 @@
         <item name="android:colorAccent">@color/lightBlue</item>
     </style>
 
+    <!-- App Bar / Action Bar Customization -->
+    <style name="actionBarTheme" parent="ThemeOverlay.AppCompat.ActionBar">
+        <item name="colorControlNormal">@color/black</item>
+    </style>
+
 </resources>
