--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -9,17 +9,29 @@
         android:id="@+id/homeFragment"
         android:name="com.felixstanley.makanmoerahandroid.fragment.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_homeFragment_to_restaurantDetailsFragment"
+            app:destination="@id/restaurantDetailsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/exploreFragment"
         android:name="com.felixstanley.makanmoerahandroid.fragment.explore.ExploreFragment"
         android:label="fragment_explore"
-        tools:layout="@layout/fragment_explore" />
+        tools:layout="@layout/fragment_explore">
+        <action
+            android:id="@+id/action_exploreFragment_to_restaurantDetailsFragment"
+            app:destination="@id/restaurantDetailsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/bookingFragment"
         android:name="com.felixstanley.makanmoerahandroid.fragment.booking.BookingFragment"
         android:label="fragment_booking"
-        tools:layout="@layout/fragment_booking" />
+        tools:layout="@layout/fragment_booking">
+        <action
+            android:id="@+id/action_bookingFragment_to_restaurantDetailsFragment"
+            app:destination="@id/restaurantDetailsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/reservationFragment"
         android:name="com.felixstanley.makanmoerahandroid.fragment.reservation.ReservationFragment"
@@ -30,4 +42,13 @@
         android:name="com.felixstanley.makanmoerahandroid.fragment.account.AccountFragment"
         android:label="fragment_account"
         tools:layout="@layout/fragment_account" />
+    <fragment
+        android:id="@+id/restaurantDetailsFragment"
+        android:name="com.felixstanley.makanmoerahandroid.fragment.restaurantdetails.RestaurantDetailsFragment"
+        android:label="fragment_restaurant_details"
+        tools:layout="@layout/fragment_restaurant_details">
+        <argument
+            android:name="restaurantId"
+            app:argType="integer" />
+    </fragment>
 </navigation>
