--- a/app/src/main/res/layout/fragment_restaurant_details.xml
+++ b/app/src/main/res/layout/fragment_restaurant_details.xml
@@ -1,16 +1,345 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".fragment.restaurantdetails.RestaurantDetailsFragment">
 
     <data>
 
+        <variable
+            name="restaurantDetailsViewModel"
+            type="com.felixstanley.makanmoerahandroid.fragment.restaurantdetails.RestaurantDetailsViewModel" />
 
+        <variable
+            name="restaurant"
+            type="com.felixstanley.makanmoerahandroid.entity.restaurant.Restaurant" />
     </data>
 
-    <TextView
-        android:id="@+id/demo_text"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/restaurant_details_card"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/restaurant_details_card_nested_scroll_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <!-- Restaurant Image -->
+                <LinearLayout
+                    android:id="@+id/restaurant_details_card_restaurant_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <!-- Restaurant Image View Height will be adjusted
+                     to match 30% of Card Height -->
+                    <ImageView
+                        android:id="@+id/restaurant_details_card_restaurant_image_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:contentDescription="@string/restaurant_card_image_content_description"
+                        android:scaleType="centerCrop"
+                        app:imageUrl="@{restaurant.restaurantImages.get(0).imageFileUrl1}" />
+                </LinearLayout>
+
+                <!-- Info Bar -->
+                <LinearLayout
+                    android:id="@+id/restaurant_details_card_info_bar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <!-- Restaurant Name -->
+                    <TextView
+                        android:id="@+id/restaurant_details_card_restaurant_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_weight="1"
+                        android:text="@{restaurant.name}"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <!-- Address City & Rating Horizontal Tab  -->
+                    <LinearLayout
+                        android:id="@+id/restaurant_details_card_address_city_rating_tab"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/restaurant_details_card_address_city"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@{restaurant.address + ' ' + restaurant.city}"
+                            android:textColor="#596067"
+                            android:textSize="10sp" />
+
+                        <RatingBar
+                            android:id="@+id/restaurant_details_card_rating"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:isIndicator="true"
+                            android:numStars="5"
+                            android:rating="@{Float.valueOf(String.valueOf(restaurant.averageStar))}"
+                            android:scaleX="0.5"
+                            android:scaleY="0.5"
+                            android:transformPivotX="0dp"
+                            android:transformPivotY="0dp" />
+
+                    </LinearLayout>
+
+                    <!-- Food Category & Price Horizontal Tab -->
+                    <LinearLayout
+                        android:id="@+id/restaurant_details_card_food_category_price_tab"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/restaurant_details_card_food_category"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@{restaurant.foodCategory}"
+                            android:textColor="#6c757d" />
+
+                        <RatingBar
+                            android:id="@+id/restaurant_details_card_price"
+                            style="@style/priceRatingBar"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:isIndicator="true"
+                            android:numStars="5"
+                            android:rating="@{Float.valueOf(String.valueOf(restaurant.priceCategory))}"
+                            android:scaleX="0.5"
+                            android:scaleY="0.5"
+                            android:transformPivotX="0dp"
+                            android:transformPivotY="0dp" />
+
+                    </LinearLayout>
+                </LinearLayout>
+
+                <!-- Description -->
+                <TextView
+                    android:id="@+id/restaurant_details_card_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_weight="1"
+                    android:text="@{restaurant.description}"
+                    android:textSize="15sp"
+                    android:textStyle="italic" />
+
+                <!-- Holiday Hour Notice (Will be shown if selected date has holiday hour entry) -->
+
+                <!-- Opening Hours Table -->
+                <TableLayout
+                    android:id="@+id/restaurant_details_card_opening_hour_table"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <!-- Table Header -->
+                    <TableRow
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp">
+
+                        <TextView
+                            android:id="@+id/restaurant_details_card_opening_hour_table_phone_header"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="10dp"
+                            android:text="@{@string/restaurant_details_fragment_opening_hour_table_phone_header_text + ' ' + restaurant.phone}"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/restaurant_details_card_opening_hour_table_opening_hour_header"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="10dp"
+                            android:text="@string/restaurant_details_fragment_opening_hour_table_opening_hour_header_text"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/restaurant_details_card_opening_hour_table_closing_hour_header"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/restaurant_details_fragment_opening_hour_table_closing_hour_header_text"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+                    </TableRow>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/opening_hour_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                </TableLayout>
+
+
+                <!-- Location Map -->
+
+                <!-- Discount (Menu) Table -->
+                <TableLayout
+                    android:id="@+id/restaurant_details_card_discount_table"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <!-- Table Header -->
+                    <TableRow
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp">
+
+                        <!--TODO: Change this to dropdown menu -->
+                        <TextView
+                            android:id="@+id/restaurant_details_card_discount_table_discount_selection"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="10dp"
+                            android:text="Discount Selection"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/restaurant_details_card_discount_table_before_header"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="10dp"
+                            android:text="@string/restaurant_details_fragment_discount_table_before_header_text"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/restaurant_details_card_discount_table_after_header"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/restaurant_details_fragment_discount_table_after_header_text"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+                    </TableRow>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/menu_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                </TableLayout>
+
+                <!-- Facilities -->
+                <TextView
+                    android:id="@+id/restaurant_details_card_facility_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="@string/restaurant_details_fragment_facility_header_text"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/facility_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <!-- Payment Modes -->
+                <TextView
+                    android:id="@+id/restaurant_details_card_payment_mode_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="@string/restaurant_details_fragment_payment_mode_header_text"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/payment_mode_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <!-- Reviews -->
+                <TextView
+                    android:id="@+id/restaurant_details_card_reviews_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="@string/restaurant_details_fragment_reviews_header_text"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:id="@+id/restaurant_details_card_review_summary"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <!-- Restaurant Average Star (Rating) -->
+                    <!--Restaurant Average Star Visibility will be set to visible by fragment
+              whenever existing reviews are not null -->
+                    <RatingBar
+                        android:id="@+id/restaurant_details_card_average_star"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:isIndicator="true"
+                        android:numStars="1"
+                        android:rating="1"
+                        android:scaleX="0.5"
+                        android:scaleY="0.5"
+                        android:transformPivotX="0dp"
+                        android:transformPivotY="0dp"
+                        android:visibility="gone" />
+
+                    <!-- Average Star Value Text and Visibility will be set by fragment whenever
+                     existing reviews are not null -->
+                    <TextView
+                        android:id="@+id/restaurant_details_card_average_star_value"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="30dp"
+                        android:textSize="15sp"
+                        android:textStyle="bold"
+                        android:visibility="gone" />
+
+                    <!-- Number Of Reviews Value Text will be set by fragment -->
+                    <TextView
+                        android:id="@+id/restaurant_details_card_number_of_reviews"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/restaurant_details_card_number_of_reviews_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:text="@string/restaurant_details_fragment_number_of_reviews_text"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/review_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+    </com.google.android.material.card.MaterialCardView>
 
 </layout>
